<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="delete">@com.htc:string/va_delete</string>
    <string name="cancel">@com.htc:string/va_cancel</string>
    <string name="select_all">@com.htc:string/va_select_all</string>
    <string name="unselect_all">@com.htc:string/va_deselect_all</string>
    <string name="fmradio_db_name">fmradio.db</string>
    <string name="string_add_preset">Add Preset</string>
    <string name="string_scan_up">Scan up</string>
    <string name="string_scan_back">Scan back</string>
    <string name="string_all_presets">Presets</string>
    <string name="sound_hound">Get info</string>
    <string name="button_power">Power</string>
    <string name="htc_new_songs_playlist">Add playlist</string>
    <string name="sdcard_missing_message">SD card missing</string>
    <string name="sdcard_busy_message">SD card is unavailable because it is being used as USB storage. Disconnect USB to access SD card.</string>
    <string name="rollbar_dot">.</string>
    <string name="search_settings_description">Artists, albums, and tracks</string>
    <string name="htc_deleting_songs">Deleting songs. Please wait...</string>
    <string name="htc_private_app">HTC Music</string>
    <string name="fm_app_name">FM Radio</string>
    <string name="fm_label_seek">Scanning. Please wait...</string>
    <string name="fm_label_turning_off">Turning off...</string>
    <string name="fm_mute_off">Unmute</string>
    <string name="fm_option_stereo">Stereo</string>
    <string name="fm_option_mono">Mono</string>
    <string name="fm_option_band_jp">Japan</string>
    <string name="fm_option_band">Europe</string>
    <string name="fm_option_speaker">Speaker</string>
    <string name="fm_option_headset">Headset</string>
    <string name="fm_speaker_on">Speaker on</string>
    <string name="fm_headset_on">Headset on</string>
    <string name="fm_option_scansave">Scan &amp; Save</string>
    <string name="fm_label_edit_message">Select a preset to edit</string>
    <string name="fm_dialog_no_headset_msg">You need a headset to work as an antenna. Please plug in your headset and try again.</string>
    <string name="fm_dialog_scanning">Scanning…</string>
    <string name="fm_dialog_ask_to_seek_msg">No preset channels. Do you want to seek and save?</string>
    <string name="fm_dialog_airplane_msg">FM tuner is not available in Airplane mode.</string>
    <string name="fm_dialog_turning_on_label">FM turning on…</string>
    <string name="fm_dialog_no_channel_msg">No channel found, please try again later.</string>
    <string name="fm_new_preset">Add preset</string>
    <string name="fm_editor_hint_add_preset ">Preset name</string>
    <string name="fm_all_presets_title">All presets</string>
    <string name="fm_delete_presets_title">Delete presets</string>
    <string name="fm_comfirm_scanning">Remove all presets and scan available channels?</string>
    <string name="fm_preset_edit_title">Preset name for</string>
    <string name="drm_interval_type_msg">This file can be used for %s miniutes. Would you like to play it now?</string>
    <string name="fm_label_mhz">MHz</string>
</resources>
